Sector bank accounts

--- a/Resources/Prototypes/Entities/Mobs/Player/admin_ghost.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/admin_ghost.yml
@@ -72,6 +72,9 @@
     hideCoords: false # Frontier
     maxIffRange: null # Frontier
   - type: CargoOrderConsole
+    taxCoefficient: 0.4 # Frontier
+    taxAccounts: # Frontier
+    - Frontier # Frontier
   - type: BankClient
   - type: CrewMonitoringConsole
   - type: GeneralStationRecordConsole
