--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/Computers/computers_shipyard.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/Computers/computers_shipyard.yml
@@ -132,6 +132,8 @@
     shipyardChannel: Syndicate
     secretShipyardChannel: Nfsd
     salesTax: 0.3
+    taxAccounts:
+    - Frontier # The scandal!
 
 - type: entity
   id: ComputerShipyardBlackMarket
@@ -160,6 +162,8 @@
     shipyardChannel: Freelance
     secretShipyardChannel: Nfsd
     salesTax: 0.3
+    taxAccounts:
+    - Frontier # The scandal!
 
 - type: entity
   id: ComputerShipyardExpedition
