--- a/Resources/Prototypes/_NF/Entities/Structures/atm.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/atm.yml
@@ -137,6 +137,9 @@
     interfaces:
       enum.BankATMMenuUiKey.BlackMarket:
         type: BankATMMenuBoundUserInterface
+  - type: BankATM
+    taxCoefficient: 0.3
+    taxAccount: Frontier # The scandal!
 
 - type: entity
   suffix: Wallmount, BlackMarket
@@ -158,11 +161,15 @@
     interfaces:
       enum.BankATMMenuUiKey.BlackMarket:
         type: BankATMMenuBoundUserInterface
+  - type: BankATM
+    taxCoefficient: 0.3
+    taxAccount: Frontier # The scandal!
 
 - type: entity
   name: station administration console
   parent: [BaseStructureDisableScrewing, BaseStructureIndestructible, BaseStructureAccessReaderImmuneToEmag, ComputerBankATMBase]
-  id: StationAdminBankATM
+  id: BaseStationAdminBankATM
+  abstract: true
   description: Used to pay out from the station's bank account
   components:
   - type: Sprite
@@ -198,5 +205,70 @@
     containers:
       board: !type:Container
       station-bank-ATM-cashSlot: !type:ContainerSlot
+  - type: AccessReader
+    access: [["HeadOfPersonnel"], ["HeadOfSecurity"]]
+
+- type: entity
+  name: station administration console
+  parent: [BaseStructureDisableScrewing, BaseStructureIndestructible, BaseStructureAccessReaderImmuneToEmag, ComputerBankATMBase]
+  id: BaseStationAdminBankATM
+  abstract: true
+  description: Used to pay out from the station's bank account
+  components:
+  - type: Sprite
+    netsync: false
+    sprite: Structures/Machines/computers.rsi
+    layers:
+    - map: ["computerLayerBody"]
+      state: computer
+    - map: ["computerLayerKeyboard"]
+      state: generic_keyboard
+    - map: ["computerLayerScreen"]
+      state: id
+    - map: ["computerLayerKeys"]
+      state: id_key
+  - type: StationBankATM
+    cashSlot:
+      name: station-bank-ATM-cashSlot
+      insertSound: /Audio/Machines/scanning.ogg
+      ejectSound: /Audio/Machines/tray_eject.ogg
+      ejectOnBreak: true
+      swap: false
+      whitelist:
+        components:
+          - Currency
+  - type: ActivatableUI
+    key: enum.BankATMMenuUiKey.ATM
+  - type: UserInterface
+    interfaces:
+      enum.BankATMMenuUiKey.ATM:
+        type: StationBankATMMenuBoundUserInterface
+  - type: ItemSlots
+  - type: ContainerContainer
+    containers:
+      board: !type:Container
+      station-bank-ATM-cashSlot: !type:ContainerSlot
+  - type: AccessReader
+    access: [["HeadOfPersonnel"], ["HeadOfSecurity"]]
+
+- type: entity
+  name: station administration console
+  parent: BaseStationAdminBankATM
+  id: StationAdminBankATMFrontier
+  description: Used to transfer funds from Frontier Outpost's bank account
+  components:
+  - type: StationBankATM
+    account: Frontier
+  - type: AccessReader
+    access: [["HeadOfPersonnel"], ["HeadOfSecurity"]]
+
+- type: entity
+  name: station administration console
+  parent: BaseStationAdminBankATM
+  id: StationAdminBankATMNfsd
+  description: Used to transfer funds from NFSD's bank account
+  components:
+  - type: StationBankATM
+    account: Nfsd
   - type: AccessReader
     access: [["HeadOfPersonnel"], ["HeadOfSecurity"]]
