--- a/Resources/Prototypes/_NF/SectorServices/services.yml
+++ b/Resources/Prototypes/_NF/SectorServices/services.yml
@@ -7,3 +7,8 @@
   id: MailMetrics
   components:
     - type: SectorLogisticStats
+
+- type: sectorService
+  id: BankAccounts
+  components:
+    - type: SectorBank
