--- a/Resources/Prototypes/Entities/Objects/Misc/paper.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/paper.yml
@@ -571,6 +571,9 @@
           tags:
           - Write
   - type: CargoOrderConsole
+    taxCoefficient: 0.4 # Frontier
+    taxAccounts: # Frontier
+    - Frontier # Frontier
   - type: BankClient
   - type: ActivatableUI
     verbText: qm-clipboard-computer-verb-text
