--- a/Resources/Prototypes/Entities/Structures/Machines/vending_machines.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/vending_machines.yml
@@ -109,6 +109,10 @@
     mod: 10 # Frontier
   - type: PotentialDeadDrop # Frontier
     hintText: dead-drop-hint-vendor # Frontier
+  - type: VendingMachine # Frontier
+    pack: "" # Frontier
+    taxCoefficient: 0.45 # Frontier
+    taxAccount: Frontier # Frontier
 
 - type: entity
   parent: VendingMachine
