Add the Apple Strudel Bites

--- a/Resources/Prototypes/_NF/Recipes/Cooking/meal_recipes.yml
+++ b/Resources/Prototypes/_NF/Recipes/Cooking/meal_recipes.yml
@@ -307,6 +307,20 @@
   recipeType:
   - Oven
 
+- type: microwaveMealRecipe
+  id: RecipeAppleStrudelBite
+  name: apple strudel bite
+  result: FoodBakedAppleStrudelBite
+  time: 5
+  solids:
+    FoodCroissantRaw: 1
+    FoodApple: 1
+    FoodButterSlice: 1
+  reagents:
+    Honey: 5
+  recipeType:
+  - Oven
+
 # NOT ACTUAL FOOD
 
 - type: microwaveMealRecipe
