--- a/Resources/Prototypes/_NF/Entities/Objects/Consumable/Food/Baked/misc.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Consumable/Food/Baked/misc.yml
@@ -60,3 +60,40 @@
   - type: Tag
     tags:
     - Fruit
+
+- type: entity
+  name: apple strudel bite
+  parent: FoodBakedBase
+  id: FoodBakedAppleStrudelBite
+  description: Just put a little icing on top and enjoy!
+  components:
+  - type: FlavorProfile
+    flavors:
+      - honey
+      - butter
+      - bread
+  - type: Sprite
+    sprite: _NF/Objects/Consumable/Food/Baked/bread.rsi
+    layers:
+      - state: apple_strudel_1
+        map: [ "Variant" ]
+  - type: RandomSprite
+    available:
+      - Variant:
+          apple_strudel_1: ""
+          apple_strudel_2: ""
+          apple_strudel_3: ""
+  - type: SolutionContainerManager
+    solutions:
+      food:
+        maxVol: 10
+        reagents:
+        - ReagentId: Nutriment
+          Quantity: 6
+        - ReagentId: Honey
+          Quantity: 2
+        - ReagentId: Flavorol
+          Quantity: 2
+  - type: Tag
+    tags:
+    - Fruit
