--- a/Resources/Prototypes/_NF/Entities/Structures/Wallmounts/Signs/posters.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Wallmounts/Signs/posters.yml
@@ -10,6 +10,16 @@
 
 - type: entity
   parent: PosterBase
+  id: NFPosterLegitGoblinTinkerer
+  name: "Engigob"
+  description: "This poster depicts a cheerful goblin-engineer telling you that explosions is the spice of tinkering."
+  components:
+  - type: Sprite
+    sprite: _NF/Structures/Wallmounts/posters.rsi
+    state: nf_poster2_legit
+
+- type: entity
+  parent: PosterBase
   id: NFPosterContrabandLvhiStation
   name: "LVHI Tetotum Station"
   description: "This poster depicts Tetotum Space Station constructed by Langstad-Voigt Heavy Industries."
@@ -87,3 +97,43 @@
   - type: Sprite
     sprite: _NF/Structures/Wallmounts/posters.rsi
     state: nf_poster8_contraband
+ 
+- type: entity
+  parent: PosterBase
+  id: NFPosterContrabandEatShrooms
+  name: "Eat Shrooms!"
+  description: "Eat Shrooms!"
+  components:
+  - type: Sprite
+    sprite: _NF/Structures/Wallmounts/posters.rsi
+    state: nt_poster12_contraband
+
+- type: entity
+  parent: PosterBase
+  id: NFPosterContrabandKillerFashion
+  name: "Da Burkin' Fashion"
+  description: "A printed copy of what appears to be a hand drawn poster of goblin in tattered tunic with a spear."
+  components:
+  - type: Sprite
+    sprite: _NF/Structures/Wallmounts/posters.rsi
+    state: nt_poster13_contraband
+
+- type: entity
+  parent: PosterBase
+  id: NFPosterContrabandGoblinFront
+  name: "Goblinkin, Unite!"
+  description: "A poster rallying goblins to unite and fight for their rights."
+  components:
+  - type: Sprite
+    sprite: _NF/Structures/Wallmounts/posters.rsi
+    state: nt_poster14_contraband
+
+- type: entity
+  parent: PosterBase
+  id: NFPosterContrabandGoblinate
+  name: "Da Great Space Goblinate!"
+  description: "A poster calling to restore The Great Goblinate in all its former glory."
+  components:
+  - type: Sprite
+    sprite: _NF/Structures/Wallmounts/posters.rsi
+    state: nt_poster15_contraband
