--- a/Resources/Prototypes/_NF/Entities/Structures/Wallmounts/Signs/posters.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Wallmounts/Signs/posters.yml
@@ -11,8 +11,8 @@
 - type: entity
   parent: PosterBase
   id: NFPosterLegitGoblinTinkerer
-  name: "Engigob"
-  description: "This poster depicts a cheerful goblin-engineer telling you that explosions is the spice of tinkering."
+  name: "Tinkering!"
+  description: "This poster depicts a cheerful goblin-engineer telling you that explosions are the spice of tinkering."
   components:
   - type: Sprite
     sprite: _NF/Structures/Wallmounts/posters.rsi
