--- a/Resources/Prototypes/_NF/Entities/Structures/Wallmounts/Signs/posters.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Wallmounts/Signs/posters.yml
@@ -47,7 +47,7 @@
   - type: Sprite
     sprite: _NF/Structures/Wallmounts/posters.rsi
     state: nf_poster3_contraband
-    
+
 - type: entity
   parent: PosterBase
   id: NFPosterContrabandFsbLogo
@@ -57,7 +57,7 @@
   - type: Sprite
     sprite: _NF/Structures/Wallmounts/posters.rsi
     state: nf_poster4_contraband
-    
+
 - type: entity
   parent: PosterBase
   id: NFPosterContrabandFsbStasis
@@ -67,7 +67,7 @@
   - type: Sprite
     sprite: _NF/Structures/Wallmounts/posters.rsi
     state: nf_poster5_contraband
-    
+
 - type: entity
   parent: PosterBase
   id: NFPosterContrabandFsbApothecary
@@ -77,7 +77,7 @@
   - type: Sprite
     sprite: _NF/Structures/Wallmounts/posters.rsi
     state: nf_poster6_contraband
-      
+
 - type: entity
   parent: PosterBase
   id: NFPosterContrabandFsbSpirit
@@ -87,7 +87,7 @@
   - type: Sprite
     sprite: _NF/Structures/Wallmounts/posters.rsi
     state: nf_poster7_contraband
-            
+
 - type: entity
   parent: PosterBase
   id: NFPosterContrabandEmsCoords
@@ -97,7 +97,7 @@
   - type: Sprite
     sprite: _NF/Structures/Wallmounts/posters.rsi
     state: nf_poster8_contraband
- 
+
 - type: entity
   parent: PosterBase
   id: NFPosterContrabandEatShrooms
@@ -106,7 +106,7 @@
   components:
   - type: Sprite
     sprite: _NF/Structures/Wallmounts/posters.rsi
-    state: nt_poster12_contraband
+    state: nf_poster12_contraband
 
 - type: entity
   parent: PosterBase
@@ -116,7 +116,7 @@
   components:
   - type: Sprite
     sprite: _NF/Structures/Wallmounts/posters.rsi
-    state: nt_poster13_contraband
+    state: nf_poster13_contraband
 
 - type: entity
   parent: PosterBase
@@ -126,7 +126,7 @@
   components:
   - type: Sprite
     sprite: _NF/Structures/Wallmounts/posters.rsi
-    state: nt_poster14_contraband
+    state: nf_poster14_contraband
 
 - type: entity
   parent: PosterBase
@@ -136,4 +136,4 @@
   components:
   - type: Sprite
     sprite: _NF/Structures/Wallmounts/posters.rsi
-    state: nt_poster15_contraband
+    state: nf_poster15_contraband
