--- a/Resources/Maps/_NF/Shuttles/liquidator.yml
+++ b/Resources/Maps/_NF/Shuttles/liquidator.yml
@@ -181,20 +181,20 @@ entities:
             188: 0,-2
             189: 0,-1
         - node:
+            color: '#52B4E9FF'
+            id: DeliveryGreyscale
+          decals:
+            215: 2,-6
+        - node:
             color: '#571212FF'
             id: DeliveryGreyscale
           decals:
             151: 0,-6
         - node:
-            color: '#96DAFFFF'
+            color: '#DE3A3AFF'
             id: DeliveryGreyscale
           decals:
-            149: 2,-6
-        - node:
-            color: '#FF5C5CFF'
-            id: DeliveryGreyscale
-          decals:
-            148: 1,-6
+            214: 1,-6
         - node:
             color: '#FFFFFFFF'
             id: DeliveryGreyscale
@@ -275,12 +275,17 @@ entities:
             130: 0,1
             131: 1,1
         - node:
+            angle: 1.5707963267948966 rad
+            color: '#FFFFFFFF'
+            id: StandClearGreyscale
+          decals:
+            210: -1,-5
+            211: -1,-4
+        - node:
             angle: 4.71238898038469 rad
             color: '#FFFFFFFF'
             id: StandClearGreyscale
           decals:
-            117: -1,-5
-            118: -1,-4
             129: 4,-3
         - node:
             color: '#D4D4D428'
