Separate the banks, station bank UI rework

--- a/Resources/Maps/_NF/Test/dev_map.yml
+++ b/Resources/Maps/_NF/Test/dev_map.yml
@@ -6997,7 +6997,7 @@ entities:
     - type: Transform
       pos: 6.985283,16.424004
       parent: 179
-- proto: StationAdminBankATM
+- proto: StationAdminBankATMFrontier
   entities:
   - uid: 1226
     components:
