--- a/Resources/Prototypes/_NF/Events/nf_events_bluespace.yml
+++ b/Resources/Prototypes/_NF/Events/nf_events_bluespace.yml
@@ -15,8 +15,12 @@
     requiredJobs:
       Sheriff: 1
   - type: BluespaceErrorRule
-    gridPaths:
-      - /Maps/_NF/Bluespace/cache.yml
+    groups:
+      grid: !type:GridSpawnGroup
+        minimumDistance: 1500
+        maximumDistance: 2500
+        paths:
+        - /Maps/_NF/Bluespace/cache.yml
     rewardFactor: 1
 
 - type: entity
@@ -36,8 +40,12 @@
     requiredJobs:
       Sheriff: 1
   - type: BluespaceErrorRule
-    gridPaths:
-      - /Maps/_NF/Bluespace/vault.yml
+    groups:
+      grid: !type:GridSpawnGroup
+        minimumDistance: 1500
+        maximumDistance: 2500
+        paths:
+        - /Maps/_NF/Bluespace/vault.yml
     rewardFactor: 1
 
 - type: entity
@@ -58,8 +66,12 @@
     requiredJobs:
       Sheriff: 1
   - type: BluespaceErrorRule
-    gridPaths:
-      - /Maps/_NF/Bluespace/vaultsmall.yml
+    groups:
+      grid: !type:GridSpawnGroup
+        minimumDistance: 1500
+        maximumDistance: 2500
+        paths:
+        - /Maps/_NF/Bluespace/vaultsmall.yml
     rewardFactor: 1
 
 - type: entity
@@ -72,14 +84,18 @@
       path: /Audio/Misc/notice1.ogg
     endAnnouncement: station-event-bluespace-generic-ftl-end-announcement
     earliestStart: 80
-    minimumPlayers: 20
+    minimumPlayers: 15
     weight: 1
     duration: 1800
     maxDuration: 2400
     reoccurrenceDelay: 480 # Only once per shift possible
   - type: BluespaceErrorRule
-    gridPaths:
-      - /Maps/_NF/Bluespace/syndieftlintercept.yml
+    groups:
+      grid: !type:GridSpawnGroup
+        minimumDistance: 1500
+        maximumDistance: 2500
+        paths:
+        - /Maps/_NF/Bluespace/syndieftlintercept.yml
 
 - type: entity
   id: BluespaceWizardFederationScout
@@ -91,14 +107,18 @@
       path: /Audio/Misc/notice1.ogg
     endAnnouncement: station-event-bluespace-generic-ftl-end-announcement
     earliestStart: 100
-    minimumPlayers: 20
+    minimumPlayers: 15
     weight: 1
     duration: 900
     maxDuration: 1200
     reoccurrenceDelay: 480 # 8 hours
   - type: BluespaceErrorRule
-    gridPaths:
-      - /Maps/_NF/Bluespace/wizardprobealt.yml
+    groups:
+      grid: !type:GridSpawnGroup
+        minimumDistance: 1500
+        maximumDistance: 2500
+        paths:
+        - /Maps/_NF/Bluespace/wizardprobealt.yml
 
 - type: entity
   id: BluespaceBloodMoon
@@ -110,14 +130,18 @@
       path: /Audio/Misc/notice1.ogg
     endAnnouncement: station-event-bluespace-generic-ftl-end-announcement
     earliestStart: 80
-    minimumPlayers: 20
+    minimumPlayers: 15
     weight: 1
     duration: 1800
     maxDuration: 2400
     reoccurrenceDelay: 480 # 8 hours
   - type: BluespaceErrorRule
-    gridPaths:
-      - /Maps/_NF/Bluespace/bloodmoon.yml
+    groups:
+      grid: !type:GridSpawnGroup
+        minimumDistance: 1500
+        maximumDistance: 2500
+        paths:
+        - /Maps/_NF/Bluespace/bloodmoon.yml
 
 - type: entity
   id: BluespaceCave
@@ -134,8 +158,12 @@
     maxDuration: 2400
     maxOccurrences: 1
   - type: BluespaceErrorRule
-    gridPaths:
-      - /Maps/_NF/Bluespace/cave.yml
+    groups:
+      grid: !type:GridSpawnGroup
+        minimumDistance: 1500
+        maximumDistance: 2500
+        paths:
+        - /Maps/_NF/Bluespace/cave.yml
 
 - type: entity
   id: BluespaceBrokenMcDelivery
@@ -153,5 +181,9 @@
     maxDuration: 1800
     reoccurrenceDelay: 240 # once per 4 hours
   - type: BluespaceErrorRule
-    gridPaths:
-      - /Maps/_NF/Bluespace/mcevent.yml
+    groups:
+      grid: !type:GridSpawnGroup
+        minimumDistance: 1500
+        maximumDistance: 2500
+        paths:
+        - /Maps/_NF/Bluespace/mcevent.yml
