--- a/Resources/Prototypes/_NF/Events/nf_events_bluespace_grids.yml
+++ b/Resources/Prototypes/_NF/Events/nf_events_bluespace_grids.yml
@@ -19,6 +19,10 @@
       grid: !type:GridSpawnGroup
         minimumDistance: 1500
         maximumDistance: 2500
+        addComponents:
+        - type: Gravity
+          enabled: true
+          inherent: true
         paths:
         - /Maps/_NF/Bluespace/cache.yml
     rewardFactor: 1
@@ -44,6 +48,10 @@
       grid: !type:GridSpawnGroup
         minimumDistance: 1500
         maximumDistance: 2500
+        addComponents:
+        - type: Gravity
+          enabled: true
+          inherent: true
         paths:
         - /Maps/_NF/Bluespace/vault.yml
     rewardFactor: 1
@@ -70,6 +78,10 @@
       grid: !type:GridSpawnGroup
         minimumDistance: 1500
         maximumDistance: 2500
+        addComponents:
+        - type: Gravity
+          enabled: true
+          inherent: true
         paths:
         - /Maps/_NF/Bluespace/vaultsmall.yml
     rewardFactor: 1
@@ -94,6 +106,10 @@
       grid: !type:GridSpawnGroup
         minimumDistance: 1500
         maximumDistance: 2500
+        addComponents:
+        - type: Gravity
+          enabled: true
+          inherent: true
         paths:
         - /Maps/_NF/Bluespace/syndieftlintercept.yml
 
@@ -117,6 +133,10 @@
       grid: !type:GridSpawnGroup
         minimumDistance: 1500
         maximumDistance: 2500
+        addComponents:
+        - type: Gravity
+          enabled: true
+          inherent: true
         paths:
         - /Maps/_NF/Bluespace/wizardprobealt.yml
 
@@ -140,6 +160,10 @@
       grid: !type:GridSpawnGroup
         minimumDistance: 1500
         maximumDistance: 2500
+        addComponents:
+        - type: Gravity
+          enabled: true
+          inherent: true
         paths:
         - /Maps/_NF/Bluespace/bloodmoon.yml
 
@@ -162,6 +186,10 @@
       grid: !type:GridSpawnGroup
         minimumDistance: 1500
         maximumDistance: 2500
+        addComponents:
+        - type: Gravity
+          enabled: true
+          inherent: true
         paths:
         - /Maps/_NF/Bluespace/cave.yml
 
@@ -185,5 +213,9 @@
       grid: !type:GridSpawnGroup
         minimumDistance: 1500
         maximumDistance: 2500
+        addComponents:
+        - type: Gravity
+          enabled: true
+          inherent: true
         paths:
         - /Maps/_NF/Bluespace/mcevent.yml
