--- a/Resources/Prototypes/_NF/Events/nf_events_bluespace_dungeons.yml
+++ b/Resources/Prototypes/_NF/Events/nf_events_bluespace_dungeons.yml
@@ -12,16 +12,16 @@
     duration: 1350
     maxDuration: 1560
     reoccurrenceDelay: 480 # 8 hours
-    requiredJobs:
-      Sheriff: 1
   - type: BluespaceErrorRule
     groups:
       vgroid: !type:DungeonSpawnGroup
         minimumDistance: 1500
         maximumDistance: 2500
+        nameDataset: names_borer
         addComponents:
         - type: Gravity
           enabled: true
           inherent: true
+        - type: IFF
         protos:
         - NFVGRoid
