--- a/Resources/Prototypes/_NF/Events/nf_events_bluespace_grids.yml
+++ b/Resources/Prototypes/_NF/Events/nf_events_bluespace_grids.yml
@@ -23,6 +23,8 @@
         - type: Gravity
           enabled: true
           inherent: true
+        - type: IFF
+          color: "#E10F9B"
         paths:
         - /Maps/_NF/Bluespace/cache.yml
     rewardFactor: 1
@@ -52,6 +54,8 @@
         - type: Gravity
           enabled: true
           inherent: true
+        - type: IFF
+          color: "#E10F9B"
         paths:
         - /Maps/_NF/Bluespace/vault.yml
     rewardFactor: 1
@@ -82,6 +86,8 @@
         - type: Gravity
           enabled: true
           inherent: true
+        - type: IFF
+          color: "#E10F9B"
         paths:
         - /Maps/_NF/Bluespace/vaultsmall.yml
     rewardFactor: 1
@@ -110,6 +116,8 @@
         - type: Gravity
           enabled: true
           inherent: true
+        - type: IFF
+          color: "#E10F9B"
         paths:
         - /Maps/_NF/Bluespace/syndieftlintercept.yml
 
@@ -137,6 +145,8 @@
         - type: Gravity
           enabled: true
           inherent: true
+        - type: IFF
+          color: "#E10F9B"
         paths:
         - /Maps/_NF/Bluespace/wizardprobealt.yml
 
@@ -164,6 +174,8 @@
         - type: Gravity
           enabled: true
           inherent: true
+        - type: IFF
+          color: "#E10F9B"
         paths:
         - /Maps/_NF/Bluespace/bloodmoon.yml
 
@@ -190,6 +202,7 @@
         - type: Gravity
           enabled: true
           inherent: true
+        - type: IFF
         paths:
         - /Maps/_NF/Bluespace/cave.yml
 
@@ -217,5 +230,6 @@
         - type: Gravity
           enabled: true
           inherent: true
+        - type: IFF
         paths:
         - /Maps/_NF/Bluespace/mcevent.yml
