Carnivore diet: no bland food buffs

--- a/Resources/Prototypes/_NF/Body/Prototypes/digestion.yml
+++ b/Resources/Prototypes/_NF/Body/Prototypes/digestion.yml
@@ -107,6 +107,21 @@
   - whitelist:
       tags:
       - Meat
+    quality: High
+    conversions:
+      Vitamin:
+        Flavorol: 0.1
+        Vitamin: 0.9
+      Nutriment:
+        Flavorol: 0.1
+        Nutriment: 0.9
+      Protein:
+        Flavorol: 0.1
+        Protein: 0.9
+  - whitelist:
+      tags:
+      - Meat
+    quality: Normal
     conversions:
       Vitamin:
         Flavorol: 0.1
@@ -118,40 +133,3 @@
         Flavorol: 0.1
         Protein: 0.9
   postDigest: Default
-
-# - type: digestion
-  # id: SimpleDiet
-  # effects:
-  # - quality: Normal
-    # conversions:
-      # Vitamin:
-        # Flavorol: 0.3
-          # Vitamin: 0.7
-      # Nutriment:
-        # Flavorol: 0.3
-          # Nutriment: 0.7
-      # Protein:
-        # Flavorol: 0.3
-          # Protein: 0.7
-  # - quality: High
-    # conversions:
-      # Vitamin:
-        # Bloatamine: 0.2
-          # Vitamin: 0.8
-      # Nutriment:
-        # Bloatamine: 0.2
-          # Nutriment: 0.8
-      # Protein:
-        # Bloatamine: 0.2
-          # Protein: 0.8
-  # - quality: Junk
-    # conversions:
-      # Vitamin:
-        # Bloatamine: 0.2
-          # Vitamin: 0.8
-      # Nutriment:
-        # Bloatamine: 0.2
-          # Nutriment: 0.8
-      # Protein:
-        # Bloatamine: 0.2
-          # Protein: 0.8
