Make some spicy windows mild, also update price and tile count

--- a/Resources/Prototypes/_NF/Shipyard/Expedition/charon.yml
+++ b/Resources/Prototypes/_NF/Shipyard/Expedition/charon.yml
@@ -12,10 +12,10 @@
   id: Charon
   name: EIS Charon
   description: Originally built as a roll-on, roll-off transport for heavy terraforming equipment. Since its obsolescence and appearance on the secondary market, the Charon has become a favorite of upfitters for the broad possibilities afforded by its open equipment bay. A product of Endurance Industrial Shipyards.
-  # Sell value @ exped shipyard 62730, 15% markup and rounding up to the nearest thousand gives us...
-  price: 73000
+  # Sell value @ exped shipyard 68952, 15% markup and a little rounding gives us...
+  price: 79500
   # 24x33 tiles
-  # 628 total tiles
+  # 627 total tiles
   # In light of the mid-range tile count and relatively narrow width I feel like Medium is more appropriate than Large even though it is technically one tile too long for the class.
   category: Medium
   group: Expedition
