--- a/Resources/Prototypes/_NF/Shipyard/sakuratsu.yml
+++ b/Resources/Prototypes/_NF/Shipyard/sakuratsu.yml
@@ -1,8 +1,8 @@
 - type: vessel
   id: Sakuratsu
   name: TSK Sakuratsu
-  description: A medium sized ship that can do both basic artifact research and salvage.
-  price: 75000
+  description: A medium sized ship that can do basic salvage, with plenty of space to add additional machines.
+  price: 55000
   category: Medium
   group: Shipyard
   shuttlePath: /Maps/_NF/Shuttles/sakuratsu.yml
