Updated category based on size
Audit of ship categories based on dimensions from ship submission guidelines

--- a/Resources/Prototypes/_NF/Shipyard/Scrap/orange.yml
+++ b/Resources/Prototypes/_NF/Shipyard/Scrap/orange.yml
@@ -3,7 +3,7 @@
   name: SV Orange
   description: A cargo slash salvage shuttle made from scavenged wrecks, comes with some damage.
   price: 18000 #Appraisal is 15800, +5% margin - TODO: fix this value, getting tests to pass - Whatstone
-  category: Small
+  category: Medium
   group: Scrap
   shuttlePath: /Maps/_NF/Shuttles/Scrap/orange.yml
   guidebookPage: Null
