--- a/Resources/Prototypes/_NF/Shipyard/hammer.yml
+++ b/Resources/Prototypes/_NF/Shipyard/hammer.yml
@@ -13,7 +13,7 @@
   name: SBB Hammer
   description: A mobile engineering platform for deep-space repairs, upgrades and remodelling.
   price: 40000
-  category: Medium
+  category: Small
   group: Shipyard
   shuttlePath: /Maps/_NF/Shuttles/hammer.yml
   guidebookPage: ShipyardHammer
