--- a/Resources/Prototypes/_NF/Shipyard/Expedition/pathfinder.yml
+++ b/Resources/Prototypes/_NF/Shipyard/Expedition/pathfinder.yml
@@ -13,7 +13,7 @@
   name: KC Pathfinder
   description: Once a scout ship serving with the Nanotrasen Marine Expeditionary Forces, this now decommissioned expedition capable ship can be yours!
   price: 52920
-  category: Small
+  category: Medium
   group: Expedition
   shuttlePath: /Maps/_NF/Shuttles/Expedition/pathfinder.yml
   guidebookPage: ShipyardPathfinder
