--- a/Resources/Prototypes/_NF/Events/nf_events_bluespace_grids.yml
+++ b/Resources/Prototypes/_NF/Events/nf_events_bluespace_grids.yml
@@ -27,7 +27,7 @@
           color: "#E10F9B"
         paths:
         - /Maps/_NF/Bluespace/cache.yml
-    rewardFactor: 1
+    nfsdRewardFactor: 1
 
 - type: entity
   id: BluespaceVaultError
@@ -58,7 +58,7 @@
           color: "#E10F9B"
         paths:
         - /Maps/_NF/Bluespace/vault.yml
-    rewardFactor: 1
+    nfsdRewardFactor: 1
 
 - type: entity
   id: BluespaceVaultSmallError
@@ -90,7 +90,7 @@
           color: "#E10F9B"
         paths:
         - /Maps/_NF/Bluespace/vaultsmall.yml
-    rewardFactor: 1
+    nfsdRewardFactor: 1
 
 - type: entity
   id: BluespaceSyndicateFTLInterception
