--- a/Resources/Prototypes/_NF/Events/nf_events_bluespace_dungeons.yml
+++ b/Resources/Prototypes/_NF/Events/nf_events_bluespace_dungeons.yml
@@ -3,14 +3,16 @@
   parent: BaseStationEventShortDelay
   components:
   - type: StationEvent
-    startAnnouncement: station-event-bluespace-cache-start-announcement
+    startAnnouncement: station-event-bluespace-dungeon-start-announcement
     startAudio:
       path: /Audio/Announcements/attention.ogg
-    endAnnouncement: station-event-bluespace-cache-end-announcement
+    warningAnnouncement: station-event-bluespace-dungeon-warning-announcement
+    endAnnouncement: station-event-bluespace-dungeon-end-announcement
     earliestStart: 100
     weight: 5
-    duration: 1350
-    maxDuration: 1560
+    duration: 120 # Temp numba
+    maxDuration: 120 # Temp numba
+    WarningDurationLeft: 61 # Temp numba
     reoccurrenceDelay: 480 # 8 hours
   - type: BluespaceErrorRule
     groups:
