buff some of the EMPs and set everything to the same 1 minute disable

--- a/Resources/Prototypes/Entities/Objects/Misc/subdermal_implants.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/subdermal_implants.yml
@@ -176,7 +176,7 @@
     - type: EmpOnTrigger
       range: 2.75
       energyConsumption: 2700000 # Frontier: 50000<2700000
-      disableDuration: 10
+      disableDuration: 60 # Frontier 10<60
 
 - type: entity
   parent: BaseSubdermalImplant
