--- a/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/Projectiles/crossbow_bolts.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/Projectiles/crossbow_bolts.yml
@@ -38,7 +38,7 @@
     offset: 0.1,0.1
   - type: ThrowingAngle
     angle: 0
-  
+
 - type: entity
   id: BaseBoltProjectile
   parent: BaseItem
@@ -466,7 +466,7 @@
   - type: EmpOnTrigger
     range: 0.5
     energyConsumption: 2700000
-    disableDuration: 10
+    disableDuration: 60 # 10<60
   - type: PointLight
     radius: 1.3
     color: cyan
