--- a/Resources/Prototypes/_NF/Recipes/Lathes/materials.yml
+++ b/Resources/Prototypes/_NF/Recipes/Lathes/materials.yml
@@ -1,10 +1,10 @@
+# Base prototype is in Resources\Prototypes\_NF\Recipes\Lathes\sheet.yml
+
 # Raw mats
 - type: latheRecipe
   id: Durathread
   result: MaterialDurathread1
-  completetime: 1
-  category: NFMaterials
-  applyMaterialDiscount: false
+  parent: BaseMaterialsNoDiscountRecipe
   materials:
     Plastic: 100
     Cloth: 100
@@ -12,8 +12,6 @@
 - type: latheRecipe # TODO: move somewhere else
   id: PaperFromSheetPaper
   result: Paper
-  category: Materials
-  applyMaterialDiscount: false
-  completetime: 1
+  parent: BaseMaterialsNoDiscountRecipe
   materials:
     Paper: 10
