Add mass scanner and radar telescreens

--- a/Resources/Prototypes/Entities/Objects/Devices/Circuitboards/computer.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/Circuitboards/computer.yml
@@ -325,6 +325,10 @@
     prototype: ComputerRadar
   - type: ComputerTabletopBoard # Frontier
     prototype: ComputerTabletopRadar # Frontier
+  - type: Tag # Frontier
+    tags: # Frontier
+    - DroneUsable # Frontier
+    - RadarConsoleCircuitboard # Frontier
 
 - type: entity
   parent: BaseComputerCircuitboard
@@ -337,6 +341,10 @@
     prototype: ComputerAdvancedRadar
   - type: ComputerTabletopBoard # Frontier
     prototype: ComputerTabletopAdvancedRadar # Frontier
+  - type: Tag # Frontier
+    tags: # Frontier
+    - DroneUsable # Frontier
+    - AdvancedRadarConsoleCircuitboard # Frontier
 
 - type: entity
   parent: BaseComputerCircuitboard
