--- a/Resources/Prototypes/_NF/tags.yml
+++ b/Resources/Prototypes/_NF/tags.yml
@@ -105,3 +105,9 @@
 
 - type: Tag
   id: NFVGRoidInterior
+
+- type: Tag
+  id: RadarConsoleCircuitboard
+
+- type: Tag
+  id: AdvancedRadarConsoleCircuitboard
