Add ledger service for querying bank accounts

--- a/Resources/Prototypes/Entities/Structures/Machines/vending_machines.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/vending_machines.yml
@@ -112,7 +112,7 @@
   - type: VendingMachine # Frontier
     pack: "" # Frontier
     taxCoefficient: 0.45 # Frontier
-    taxAccount: Frontier # Frontier
+    taxAccounts: [Frontier] # Frontier
 
 - type: entity
   parent: VendingMachine
