--- a/Resources/Prototypes/_NF/Entities/Objects/Devices/cartridges.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Devices/cartridges.yml
@@ -47,6 +47,25 @@
       icon: Objects/Tools/appraisal-tool.rsi/icon.png
     - type: AppraisalCartridge
 
+- type: entity
+  parent: NFBasePDACartridge
+  id: LedgerCartridge
+  name: SpesoFlow Lite cartridge
+  description: A program for keeping track of sector bank accounts.
+  components:
+    - type: Sprite
+      sprite: _NF/Objects/Devices/cartridge.rsi
+      state: cart-appraisal
+    - type: Icon
+      sprite: _NF/Objects/Devices/cartridge.rsi
+      state: cart-appraisal
+    - type: UIFragment
+      ui: !type:LedgerUi
+    - type: Cartridge
+      programName: ledger-program-name
+      icon: Objects/Tools/appraisal-tool.rsi/icon.png
+    - type: NFLedgerCartridge
+
 # Not a PDA cartridge (then why is this here)
 - type: entity
   parent: BaseItem
