--- a/Resources/Prototypes/_NF/Entities/Clothing/Back/base_clothing_backpack.yml
+++ b/Resources/Prototypes/_NF/Entities/Clothing/Back/base_clothing_backpack.yml
@@ -2,7 +2,7 @@
 - type: entity
   abstract: true
   id: NFBackpackHiddenStash
-  components:  
+  components:
   - type: Appearance
   - type: SubFloorHide
   - type: Anchorable
@@ -10,9 +10,9 @@
     enable: false
   - type: Transform
     anchored: false
+  - type: AnchorableStorage
 
 - type: entity
-  abstract: true
   parent: [ ClothingBackpack, NFBackpackHiddenStash ]
   id: NFClothingBackpack
   components:
@@ -27,7 +27,6 @@
     - 0,0,6,3
 
 - type: entity
-  abstract: true
   parent: [ ClothingBackpackDuffel, NFBackpackHiddenStash ]
   id: NFClothingDuffel
   components:
@@ -45,7 +44,7 @@
   abstract: true
   parent: NFClothingBackpack
   id: NFClothingMessenger
-  components:  
+  components:
   ## One 4x4 pocket, four 2x2 pockets
   - type: Storage
     grid:
