--- a/Resources/Prototypes/_NF/Entities/Structures/Wallmounts/Signs/posters.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Wallmounts/Signs/posters.yml
@@ -12,7 +12,7 @@
   parent: PosterBase
   id: NFPosterLegitGoblinTinkerer
   name: "Tinkering!"
-  description: "This poster depicts a cheerful goblin-engineer telling you that explosions are the spice of tinkering."
+  description: "This poster depicts a cheerful goblin engineer telling you that explosions are the spice of tinkering."
   components:
   - type: Sprite
     sprite: _NF/Structures/Wallmounts/posters.rsi
@@ -112,7 +112,7 @@
   parent: PosterBase
   id: NFPosterContrabandKillerFashion
   name: "Da Burkin' Fashion"
-  description: "A printed copy of what appears to be a hand drawn poster of goblin in tattered tunic with a spear."
+  description: "A printed copy of what appears to be a hand-drawn poster of a goblin in a tattered tunic with a spear."
   components:
   - type: Sprite
     sprite: _NF/Structures/Wallmounts/posters.rsi
