FTL, Working warnings

--- a/Resources/Prototypes/_NF/Events/nf_events_bluespace_dungeons.yml
+++ b/Resources/Prototypes/_NF/Events/nf_events_bluespace_dungeons.yml
@@ -12,18 +12,22 @@
     weight: 5
     duration: 120 # Temp numba
     maxDuration: 120 # Temp numba
-    WarningDurationLeft: 61 # Temp numba
+    warningDurationLeft: 60 # Temp numba
     reoccurrenceDelay: 480 # 8 hours
   - type: BluespaceErrorRule
     groups:
       vgroid: !type:DungeonSpawnGroup
+        nameDataset: names_borer
         minimumDistance: 1500
         maximumDistance: 2500
-        nameDataset: names_borer
         addComponents:
         - type: Gravity
           enabled: true
           inherent: true
         - type: IFF
+        - type: Physics
+          bodyStatus: InAir
+          angularDamping: 999999
+          linearDamping: 999999
         protos:
         - NFVGRoid
