--- a/Resources/Prototypes/_NF/Events/nf_events_bluespace_dungeons.yml
+++ b/Resources/Prototypes/_NF/Events/nf_events_bluespace_dungeons.yml
@@ -25,8 +25,7 @@
           enabled: true
           inherent: true
         - type: IFF
-        - type: Physics
-          bodyStatus: InAir
+        - type: Shuttle
           angularDamping: 999999
           linearDamping: 999999
         protos:
