--- a/Resources/Prototypes/_NF/Events/nf_events_bluespace_grids.yml
+++ b/Resources/Prototypes/_NF/Events/nf_events_bluespace_grids.yml
@@ -27,8 +27,7 @@
           inherent: true
         - type: IFF
           color: "#E10F9B"
-        - type: Physics
-          bodyStatus: InAir
+        - type: Shuttle
           angularDamping: 999999
           linearDamping: 999999
         paths:
@@ -64,8 +63,7 @@
           inherent: true
         - type: IFF
           color: "#E10F9B"
-        - type: Physics
-          bodyStatus: InAir
+        - type: Shuttle
           angularDamping: 999999
           linearDamping: 999999
         paths:
@@ -102,8 +100,7 @@
           inherent: true
         - type: IFF
           color: "#E10F9B"
-        - type: Physics
-          bodyStatus: InAir
+        - type: Shuttle
           angularDamping: 999999
           linearDamping: 999999
         paths:
@@ -138,8 +135,7 @@
           inherent: true
         - type: IFF
           color: "#E10F9B"
-        - type: Physics
-          bodyStatus: InAir
+        - type: Shuttle
           angularDamping: 999999
           linearDamping: 999999
         paths:
@@ -173,8 +169,7 @@
           inherent: true
         - type: IFF
           color: "#E10F9B"
-        - type: Physics
-          bodyStatus: InAir
+        - type: Shuttle
           angularDamping: 999999
           linearDamping: 999999
         paths:
@@ -208,8 +203,7 @@
           inherent: true
         - type: IFF
           color: "#E10F9B"
-        - type: Physics
-          bodyStatus: InAir
+        - type: Shuttle
           angularDamping: 999999
           linearDamping: 999999
         paths:
@@ -241,8 +235,7 @@
           enabled: true
           inherent: true
         - type: IFF
-        - type: Physics
-          bodyStatus: InAir
+        - type: Shuttle
           angularDamping: 999999
           linearDamping: 999999
         paths:
