--- a/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/Projectiles/magic.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/Projectiles/magic.yml
@@ -1,26 +1,6 @@
 ﻿## Bullets
 - type: entity
   parent: BaseBulletTrigger
-  id: BulletFireBolt
-  name: fire bolt
-  categories: [ HideSpawnMenu ]
-  components:
-  - type: Projectile
-    damage:
-      types:
-        Heat: 2
-  - type: Sprite
-    noRot: false
-    sprite: Objects/Weapons/Guns/Projectiles/magic.rsi
-    layers:
-    - state: infernoshot
-  - type: Ammo
-    muzzleFlash: null
-  - type: IgniteOnCollide
-    fireStacks: 2
-
-- type: entity
-  parent: BaseBulletTrigger
   id: BulletMagicBolt
   name: magic bolt
   categories: [ HideSpawnMenu ]
@@ -128,3 +108,42 @@
   impactFlash:
     sprite: _NF/Effects/wizardbeams.rsi
     state: lightning-hit-01
+
+# Experimental spells
+# TODO: split spells into 3 tiers aprentice, adept, master.
+# Fire magic
+# TODO: slow moving spread of fireballs, cluster fireball, cluster cluster fireball, fissure (entity, that shoots fireballs in every direction periodically)
+
+- type: entity
+  parent: BaseBulletTrigger
+  id: BulletFireBolt
+  name: fire bolt
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: Projectile
+    damage:
+      types:
+        Heat: 2
+  - type: Sprite
+    noRot: false
+    sprite: Objects/Weapons/Guns/Projectiles/magic.rsi
+    layers:
+    - state: infernoshot
+  - type: Ammo
+    muzzleFlash: null
+  - type: IgniteOnCollide
+    fireStacks: 2
+
+- type: entity
+  id: BulletFireBoltSpread
+  categories: [ HideSpawnMenu ]
+  parent: BaseItem
+  components:
+  - type: Ammo
+    muzzleFlash: null
+  - type: ProjectileSpread
+    proto: BulletFireBolt
+    count: 6
+    spread: 35
+
+# Cluster fire ball
